--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,10 +3,10 @@
 {% block content %}
   <div class="container py-5">
     <h1>Последние обновления на сайте</h1>
-      {% include 'includes/switcher.html' %}
+      {% include 'includes/posts/switcher.html' with index=True %}
       {% for post in page_obj %}
-        {% include 'includes/article.html' %}
+        {% include 'includes/posts/article.html' %}
       {% endfor %}
-      {% include 'includes/paginator.html' %}
+      {% include 'includes/posts/paginator.html' %}
   </div>
 {% endblock %}
